change valid_ways to ways_filter

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -118,7 +118,7 @@
     "                return [float(coord) for coord in bbox]  \n",
     "    raise ValueError(\"Bounding Box konnte nicht abgerufen werden.\")\n",
     "    \n",
-    "city_name = \"Nilkheim\"    \n",
+    "city_name = \"Ringheim\"    \n",
     "bbox = get_bounding_box(city_name)\n",
     "south, north, west, east = bbox\n",
     "\n",
@@ -160,9 +160,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "valid_ways = ways_filter[ways_filter['node_ids'].apply(lambda node_ids: any(node in df_filtered_nodes['id'].values for node in node_ids))]\n",
+    "ways_filter = ways_filter[ways_filter['node_ids'].apply(lambda node_ids: any(node in df_filtered_nodes['id'].values for node in node_ids))]\n",
     "\n",
-    "df_filtered = pd.concat([df_filtered_nodes, valid_ways])\n",
+    "df_filtered = pd.concat([df_filtered_nodes, ways_filter])\n",
     "df_filtered"
    ]
   },
@@ -250,7 +250,7 @@
    "outputs": [],
    "source": [
     "all_node_ids = []\n",
-    "for node_ids_list in valid_ways['node_ids']:\n",
+    "for node_ids_list in ways_filter['node_ids']:\n",
     "    if node_ids_list is not None:\n",
     "        all_node_ids.extend(node_ids_list)\n",
     "\n",
@@ -260,7 +260,7 @@
     "\n",
     "df_nodes_filtered_multiple = df_filtered[(df_filtered['type'] == 'node') & (df_filtered['id'].isin(nodes_referenced_multiple))]\n",
     "\n",
-    "filtered_data_multiple = pd.concat([valid_ways, df_nodes_filtered_multiple], ignore_index=True)\n",
+    "filtered_data_multiple = pd.concat([ways_filter, df_nodes_filtered_multiple], ignore_index=True)\n",
     "\n",
     "filtered_data_multiple"
    ]
@@ -286,7 +286,7 @@
     "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
     "# Kanten zum Graphen hinzufügen\n",
-    "for index, way in valid_ways.iterrows():\n",
+    "for index, way in ways_filter.iterrows():\n",
     "    node_ids_list = way['node_ids']\n",
     "    if node_ids_list is not None:\n",
     "        filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
@@ -402,7 +402,7 @@
     "                    neighbor_1, neighbor_2 = neighbors\n",
     "\n",
     "                    # Finde die zwei Straßen, die den Grad-2-Knoten referenzieren\n",
-    "                    referencing_ways = valid_ways[valid_ways['node_ids'].apply(lambda x: node_id in x)]\n",
+    "                    referencing_ways = ways_filter[ways_filter['node_ids'].apply(lambda x: node_id in x)]\n",
     "\n",
     "                    if len(referencing_ways) == 2:\n",
     "                        way_1, way_2 = referencing_ways.iloc[0], referencing_ways.iloc[1]\n",
@@ -418,8 +418,8 @@
     "                            way_1_node_ids.append(neighbor_1)\n",
     "\n",
     "                        # Aktualisiere die DataFrame-Zeilen\n",
-    "                        valid_ways.at[way_1.name, 'node_ids'] = way_1_node_ids\n",
-    "                        valid_ways.at[way_2.name, 'node_ids'] = way_2_node_ids\n",
+    "                        ways_filter.at[way_1.name, 'node_ids'] = way_1_node_ids\n",
+    "                        ways_filter.at[way_2.name, 'node_ids'] = way_2_node_ids\n",
     "\n",
     "        # Stelle sicher, dass die Rückgabewerte korrekt sind\n",
     "        return updated_node_ids if updated_node_ids else None\n",
@@ -476,7 +476,7 @@
     "        neighbors_by_special_node[node_id] = []\n",
     "        connected_node_ids = set()\n",
     "        for way_id in ways:\n",
-    "            way = valid_ways[valid_ways['id'] == way_id]\n",
+    "            way = ways_filter[ways_filter['id'] == way_id]\n",
     "            if not way.empty:\n",
     "                connected_node_ids.update(way.iloc[0]['node_ids'])\n",
     "\n",
@@ -532,8 +532,8 @@
     "                    if len(referencing_ways) == 2:\n",
     "                        way_1_id, way_2_id = referencing_ways[0], referencing_ways[1]\n",
     "                        \n",
-    "                        way_1 = valid_ways[valid_ways['id'] == way_1_id].iloc[0]\n",
-    "                        way_2 = valid_ways[valid_ways['id'] == way_2_id].iloc[0]\n",
+    "                        way_1 = ways_filter[ways_filter['id'] == way_1_id].iloc[0]\n",
+    "                        way_2 = ways_filter[ways_filter['id'] == way_2_id].iloc[0]\n",
     "\n",
     "                        way_1_node_ids = list(way_1['node_ids']) if isinstance(way_1['node_ids'], list) else way_1['node_ids']\n",
     "                        way_2_node_ids = list(way_2['node_ids']) if isinstance(way_2['node_ids'], list) else way_2['node_ids']\n",
@@ -543,8 +543,8 @@
     "                        if neighbor_1 not in way_1_node_ids:\n",
     "                            way_1_node_ids.append(neighbor_1)\n",
     "\n",
-    "                        valid_ways.at[way_1.name, 'node_ids'] = way_1_node_ids\n",
-    "                        valid_ways.at[way_2.name, 'node_ids'] = way_2_node_ids\n",
+    "                        ways_filter.at[way_1.name, 'node_ids'] = way_1_node_ids\n",
+    "                        ways_filter.at[way_2.name, 'node_ids'] = way_2_node_ids\n",
     "        \n",
     "        return updated_node_ids if updated_node_ids else None\n",
     "    \n",
@@ -574,7 +574,7 @@
     "existing_node_ids = set(filtered_data_multiple[filtered_data_multiple['type'] == 'node']['id'])\n",
     "\n",
     "# Wege durchgehen und Kanten im Graphen hinzufügen\n",
-    "for _, row in valid_ways.iterrows():\n",
+    "for _, row in ways_filter.iterrows():\n",
     "    node_ids = row['node_ids']\n",
     "    if node_ids is not None:\n",
     "        valid_node_ids = [node_id for node_id in node_ids if node_id in existing_node_ids]\n",
@@ -595,7 +595,7 @@
     "# Spezielle Knoten mit Grad 2 finden\n",
     "nodes_degree_2 = [node for node, degree in G.degree() if degree == 2]\n",
     "node_way_mapping = {node_id: [] for node_id in nodes_degree_2}\n",
-    "for index, way in valid_ways.iterrows():\n",
+    "for index, way in ways_filter.iterrows():\n",
     "    node_ids_list = way['node_ids']\n",
     "    if node_ids_list is not None:\n",
     "        for node_id in nodes_degree_2:\n",
@@ -622,7 +622,7 @@
    "outputs": [],
    "source": [
     "# Straßen mit speziellen Knoten ermitteln\n",
-    "connected_ways_for_special_nodes = get_connected_ways_for_special_nodes(df_special_nodes, valid_ways, G)\n",
+    "connected_ways_for_special_nodes = get_connected_ways_for_special_nodes(df_special_nodes, ways_filter, G)\n",
     "\n",
     "# Nachbarn von speziellen Knoten ermitteln\n",
     "neighbors_by_special_node = handle_special_degree_2_nodes(df_special_nodes, connected_ways_for_special_nodes, G)\n",
@@ -666,7 +666,7 @@
     "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
     "# Kanten zum Graphen hinzufügen\n",
-    "for index, way in valid_ways.iterrows():\n",
+    "for index, way in ways_filter.iterrows():\n",
     "    node_ids_list = way['node_ids']\n",
     "    if node_ids_list is not None:\n",
     "        filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
@@ -734,7 +734,7 @@
     "    return node_ids\n",
     "\n",
     "# Zusammenfügen der Knoten, die nah beieinander stehen\n",
-    "def merge_within_distance(df_nodes, max_distance=5):\n",
+    "def merge_within_distance(df_nodes, max_distance=10):\n",
     "    merged_nodes = []\n",
     "    node_merge_dict = {}\n",
     "    seen = set()\n",
@@ -806,7 +806,7 @@
     "        G.add_node(row['id'], pos=(row['longitude'], row['latitude']))\n",
     "\n",
     "# Kanten zum Graphen hinzufügen\n",
-    "for index, way in valid_ways.iterrows():\n",
+    "for index, way in ways_filter.iterrows():\n",
     "    node_ids_list = way['node_ids']\n",
     "    if node_ids_list is not None:\n",
     "        filtered_node_ids_list = [node_id for node_id in node_ids_list if G.has_node(node_id)]\n",
@@ -880,7 +880,7 @@
     "    # Überprüfen, ob der Rand highway != 'residual' ist\n",
     "    is_dashed_highway = False\n",
     "    street_name = \"\"\n",
-    "    for street in valid_ways.itertuples():\n",
+    "    for street in ways_filter.itertuples():\n",
     "        if edge[0] in street.node_ids and edge[1] in street.node_ids:\n",
     "            street_name = street.tagvalue\n",
     "            # Highway-Kanten, die nicht 'residual' sind, werden gestrichelt\n",
