Changes small mistakes

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -162,8 +162,8 @@
    "source": [
     "ways_filter = ways_filter[ways_filter['node_ids'].apply(lambda node_ids: any(node in df_filtered_nodes['id'].values for node in node_ids))]\n",
     "\n",
-    "df_filtered = pd.concat([df_filtered_nodes, ways_filter])\n",
-    "df_filtered"
+    "df_osm = pd.concat([df_filtered_nodes, ways_filter])\n",
+    "df_osm"
    ]
   },
   {
@@ -226,8 +226,8 @@
     "\n",
     "road_lengths = []\n",
     "\n",
-    "for index, way_row in valid_ways.iterrows():\n",
-    "    length = calculate_full_road_length(way_row, df_filtered)\n",
+    "for index, way_row in ways_filter.iterrows():\n",
+    "    length = calculate_full_road_length(way_row, df_osm)\n",
     "    if length is not None:\n",
     "        road_lengths.append({'way_id': way_row['id'], 'length': length})\n",
     "\n",
@@ -258,7 +258,7 @@
     "\n",
     "nodes_referenced_multiple = {node_id for node_id, count in node_reference_count.items() if count > 1}\n",
     "\n",
-    "df_nodes_filtered_multiple = df_filtered[(df_filtered['type'] == 'node') & (df_filtered['id'].isin(nodes_referenced_multiple))]\n",
+    "df_nodes_filtered_multiple = df_osm[(df_osm['type'] == 'node') & (df_osm['id'].isin(nodes_referenced_multiple))]\n",
     "\n",
     "filtered_data_multiple = pd.concat([ways_filter, df_nodes_filtered_multiple], ignore_index=True)\n",
     "\n",
@@ -734,7 +734,7 @@
     "    return node_ids\n",
     "\n",
     "# Zusammenfügen der Knoten, die nah beieinander stehen\n",
-    "def merge_within_distance(df_nodes, max_distance=10):\n",
+    "def merge_within_distance(df_nodes, max_distance=5):\n",
     "    merged_nodes = []\n",
     "    node_merge_dict = {}\n",
     "    seen = set()\n",
