Get data for mutliple citys

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "import plotly.graph_objects as go\n",
     "import networkx as nx\n",
     "import matplotlib.image as mpimg\n",
-    "from sklearn.cluster import DBSCAN\n",
+    "from urllib.parse import quote\n",
     "import numpy as np\n",
     "import os\n",
     "import requests\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,25 +116,14 @@
     "            if 'boundingbox' in result:\n",
     "                bbox = result['boundingbox']\n",
     "                return [float(coord) for coord in bbox]  \n",
-    "    raise ValueError(\"Bounding Box konnte nicht abgerufen werden.\")\n",
-    "    \n",
-    "city_name = \"Ringheim\"    \n",
-    "bbox = get_bounding_box(city_name)\n",
-    "south, north, west, east = bbox\n",
-    "\n",
-    "df_filtered_nodes = df_osm[\n",
-    "    ((df_osm['latitude'] >= south) & (df_osm['latitude'] <= north)) &\n",
-    "    ((df_osm['longitude'] >= west) & (df_osm['longitude'] <= east))    \n",
-    "]\n",
-    "\n",
-    "df_filtered_nodes"
+    "    raise ValueError(\"Bounding Box konnte nicht abgerufen werden.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Datensatz für Straßen"
+    "### Datensatz nach Städten filtern"
    ]
   },
   {
@@ -143,27 +132,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ways_filter = df_osm[(df_osm['type'] == 'way') & (df_osm['tagkey'] == 'highway')]\n",
-    "ways_filter"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Datensatz für angegebenen Ort"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ways_filter = ways_filter[ways_filter['node_ids'].apply(lambda node_ids: any(node in df_filtered_nodes['id'].values for node in node_ids))]\n",
+    "cities = [\"Ringheim\", \"Niedernberg\"]\n",
+    "filtered_data = []\n",
     "\n",
-    "df_osm = pd.concat([df_filtered_nodes, ways_filter])\n",
-    "df_osm"
+    "for city_name in cities:\n",
+    "    try:\n",
+    "        lon1, lon2, lat1, lat2 = get_bounding_box(city_name)\n",
+    "        \n",
+    "        # Knoten innerhalb der Bounding-Box\n",
+    "        df_filtered_nodes = df_osm[\n",
+    "            ((df_osm['latitude'] >= lon1) & (df_osm['latitude'] <= lon2)) &\n",
+    "            ((df_osm['longitude'] >= lat1) & (df_osm['longitude'] <= lat2)) &\n",
+    "            (df_osm['type'] == 'node')\n",
+    "        ].copy()\n",
+    "        \n",
+    "        # Wege mit referenzierten Knoten\n",
+    "        node_ids_set = set(df_filtered_nodes['id'].values)\n",
+    "        ways_filter = df_osm[\n",
+    "            (df_osm['type'] == 'way') & (df_osm['tagkey'] == 'highway') &\n",
+    "            (df_osm['node_ids'].apply(lambda nodes: nodes and any(node in node_ids_set for node in nodes)))\n",
+    "        ].copy()\n",
+    "\n",
+    "        # Stadtname hinzufügen\n",
+    "        df_filtered_nodes['city'] = city_name\n",
+    "        ways_filter['city'] = city_name\n",
+    "        \n",
+    "        filtered_data.extend(df_filtered_nodes.to_dict('records'))\n",
+    "        filtered_data.extend(ways_filter.to_dict('records'))\n",
+    "\n",
+    "    except ValueError as e:\n",
+    "        print(e)\n",
+    "\n",
+    "filtered_df = pd.DataFrame(filtered_data)\n",
+    "filtered_df.reset_index(drop=True, inplace=True)\n",
+    "filtered_df"
    ]
   },
   {
@@ -175,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,13 +228,13 @@
     "\n",
     "road_lengths = []\n",
     "\n",
-    "for index, way_row in ways_filter.iterrows():\n",
-    "    length = calculate_full_road_length(way_row, df_osm)\n",
+    "for index, way_row in filtered_df[filtered_df['type'] == 'way'].iterrows():\n",
+    "    length = calculate_full_road_length(way_row, filtered_df[filtered_df['type'] == 'node'])\n",
     "    if length is not None:\n",
-    "        road_lengths.append({'way_id': way_row['id'], 'length': length})\n",
+    "        road_lengths.append({'way_id': way_row['id'], 'length': length, 'city': way_row['city']})\n",
     "\n",
     "df_road_length = pd.DataFrame(road_lengths)\n",
-    "\n",
+    "df_road_length.reset_index(drop=True, inplace=True)\n",
     "df_road_length"
    ]
   },
@@ -250,17 +252,16 @@
    "outputs": [],
    "source": [
     "all_node_ids = []\n",
-    "for node_ids_list in ways_filter['node_ids']:\n",
+    "for node_ids_list in filtered_df[filtered_df['type'] == 'way']['node_ids']:\n",
     "    if node_ids_list is not None:\n",
     "        all_node_ids.extend(node_ids_list)\n",
     "\n",
     "node_reference_count = Counter(all_node_ids)\n",
-    "\n",
     "nodes_referenced_multiple = {node_id for node_id, count in node_reference_count.items() if count > 1}\n",
     "\n",
-    "df_nodes_filtered_multiple = df_osm[(df_osm['type'] == 'node') & (df_osm['id'].isin(nodes_referenced_multiple))]\n",
+    "df_nodes_filtered_multiple = filtered_df[(filtered_df['type'] == 'node') & (filtered_df['id'].isin(nodes_referenced_multiple))]\n",
     "\n",
-    "filtered_data_multiple = pd.concat([ways_filter, df_nodes_filtered_multiple], ignore_index=True)\n",
+    "filtered_data_multiple = pd.concat([filtered_df[filtered_df['type'] == 'way'], df_nodes_filtered_multiple], ignore_index=True)\n",
     "\n",
     "filtered_data_multiple"
    ]
