Add relation filter to api request

--- a/Dataset_Visualization.ipynb
+++ b/Dataset_Visualization.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "[14504022 rows x 9 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "[335843 rows x 9 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -577,63 +577,63 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>201</th>\n",
+       "      <th>145</th>\n",
        "      <td>node</td>\n",
-       "      <td>524024</td>\n",
+       "      <td>523963</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.054348</td>\n",
-       "      <td>49.950931</td>\n",
+       "      <td>9.110167</td>\n",
+       "      <td>49.921222</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8713</th>\n",
+       "      <th>146</th>\n",
        "      <td>node</td>\n",
-       "      <td>27345586</td>\n",
+       "      <td>523965</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.046306</td>\n",
-       "      <td>49.936876</td>\n",
+       "      <td>9.108361</td>\n",
+       "      <td>49.923500</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8714</th>\n",
+       "      <th>147</th>\n",
        "      <td>node</td>\n",
-       "      <td>27345587</td>\n",
+       "      <td>523966</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.047442</td>\n",
-       "      <td>49.935329</td>\n",
+       "      <td>9.105139</td>\n",
+       "      <td>49.927583</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8715</th>\n",
+       "      <th>148</th>\n",
        "      <td>node</td>\n",
-       "      <td>27345588</td>\n",
+       "      <td>523967</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.043650</td>\n",
-       "      <td>49.933117</td>\n",
+       "      <td>9.101528</td>\n",
+       "      <td>49.931861</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8716</th>\n",
+       "      <th>149</th>\n",
        "      <td>node</td>\n",
-       "      <td>27345589</td>\n",
+       "      <td>523968</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.038758</td>\n",
-       "      <td>49.939419</td>\n",
+       "      <td>9.099194</td>\n",
+       "      <td>49.933972</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -649,15 +649,15 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10827198</th>\n",
+       "      <th>10865858</th>\n",
        "      <td>node</td>\n",
-       "      <td>12049890149</td>\n",
+       "      <td>12094111337</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
-       "      <td>highway</td>\n",
-       "      <td>street_lamp</td>\n",
-       "      <td>9.054631</td>\n",
-       "      <td>49.939192</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>9.075726</td>\n",
+       "      <td>49.956142</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -710,40 +710,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>14728 rows × 9 columns</p>\n",
+       "<p>86973 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          type           id  visible  ntags       tagkey     tagvalue  \\\n",
-       "201       node       524024     True      0         None         None   \n",
-       "8713      node     27345586     True      0         None         None   \n",
-       "8714      node     27345587     True      0         None         None   \n",
-       "8715      node     27345588     True      0         None         None   \n",
-       "8716      node     27345589     True      0         None         None   \n",
+       "145       node       523963     True      0         None         None   \n",
+       "146       node       523965     True      0         None         None   \n",
+       "147       node       523966     True      0         None         None   \n",
+       "148       node       523967     True      0         None         None   \n",
+       "149       node       523968     True      0         None         None   \n",
        "...        ...          ...      ...    ...          ...          ...   \n",
-       "10827198  node  12049890149     True      1      highway  street_lamp   \n",
+       "10865858  node  12094111337     True      0         None         None   \n",
        "10879226  node  12106365063     True      2      amenity        bench   \n",
        "10879227  node  12106365063     True      2     backrest          yes   \n",
        "10879228  node  12106405174     True      2  information        board   \n",
        "10879229  node  12106405174     True      2      tourism  information   \n",
        "\n",
        "          longitude   latitude node_ids  \n",
-       "201        9.054348  49.950931     None  \n",
-       "8713       9.046306  49.936876     None  \n",
-       "8714       9.047442  49.935329     None  \n",
-       "8715       9.043650  49.933117     None  \n",
-       "8716       9.038758  49.939419     None  \n",
+       "145        9.110167  49.921222     None  \n",
+       "146        9.108361  49.923500     None  \n",
+       "147        9.105139  49.927583     None  \n",
+       "148        9.101528  49.931861     None  \n",
+       "149        9.099194  49.933972     None  \n",
        "...             ...        ...      ...  \n",
-       "10827198   9.054631  49.939192     None  \n",
+       "10865858   9.075726  49.956142     None  \n",
        "10879226   9.038913  49.947492     None  \n",
        "10879227   9.038913  49.947492     None  \n",
        "10879228   9.038824  49.947489     None  \n",
        "10879229   9.038824  49.947489     None  \n",
        "\n",
-       "[14728 rows x 9 columns]"
+       "[86973 rows x 9 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,12 +759,12 @@
     "    if response.status_code == 200:\n",
     "        results = response.json()\n",
     "        for result in results:\n",
-    "            if 'boundingbox' in result:\n",
+    "             if result.get('osm_type') == 'relation' and 'boundingbox' in result:\n",
     "                bbox = result['boundingbox']\n",
     "                return [float(coord) for coord in bbox]  \n",
     "    raise ValueError(\"Bounding Box konnte nicht abgerufen werden.\")\n",
     "    \n",
-    "city_name = \"Ringheim\"    \n",
+    "city_name = \"Großostheim\"    \n",
     "bbox = get_bounding_box(city_name)\n",
     "south, north, west, east = bbox\n",
     "\n",
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,14 +838,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Daten für Ringheim wurden in c:\\Users\\samu2\\Documents\\git\\Bachelorarbeit\\City_data\\Ringheim.json gespeichert.\n"
+      "Daten für Großostheim wurden in c:\\Users\\samu2\\Documents\\git\\Bachelorarbeit\\City_data\\Großostheim.json gespeichert.\n"
      ]
     },
     {
@@ -882,63 +882,63 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>201</th>\n",
+       "      <th>145</th>\n",
        "      <td>node</td>\n",
-       "      <td>524024</td>\n",
+       "      <td>523963</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.054348</td>\n",
-       "      <td>49.950931</td>\n",
+       "      <td>9.110167</td>\n",
+       "      <td>49.921222</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8713</th>\n",
+       "      <th>146</th>\n",
        "      <td>node</td>\n",
-       "      <td>27345586</td>\n",
+       "      <td>523965</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.046306</td>\n",
-       "      <td>49.936876</td>\n",
+       "      <td>9.108361</td>\n",
+       "      <td>49.923500</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8714</th>\n",
+       "      <th>147</th>\n",
        "      <td>node</td>\n",
-       "      <td>27345587</td>\n",
+       "      <td>523966</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.047442</td>\n",
-       "      <td>49.935329</td>\n",
+       "      <td>9.105139</td>\n",
+       "      <td>49.927583</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8715</th>\n",
+       "      <th>148</th>\n",
        "      <td>node</td>\n",
-       "      <td>27345588</td>\n",
+       "      <td>523967</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.043650</td>\n",
-       "      <td>49.933117</td>\n",
+       "      <td>9.101528</td>\n",
+       "      <td>49.931861</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8716</th>\n",
+       "      <th>149</th>\n",
        "      <td>node</td>\n",
-       "      <td>27345589</td>\n",
+       "      <td>523968</td>\n",
        "      <td>True</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
-       "      <td>9.038758</td>\n",
-       "      <td>49.939419</td>\n",
+       "      <td>9.099194</td>\n",
+       "      <td>49.933972</td>\n",
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -954,101 +954,101 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14421281</th>\n",
+       "      <th>14456134</th>\n",
        "      <td>way</td>\n",
-       "      <td>1235559707</td>\n",
-       "      <td>True</td>\n",
-       "      <td>3</td>\n",
-       "      <td>highway</td>\n",
-       "      <td>track</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[11469989084, 11542421175, 11469989085]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14430194</th>\n",
-       "      <td>way</td>\n",
-       "      <td>1241710459</td>\n",
-       "      <td>True</td>\n",
-       "      <td>4</td>\n",
-       "      <td>highway</td>\n",
-       "      <td>track</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>[11537578926, 11537578943, 11537578938, 115375...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14430198</th>\n",
-       "      <td>way</td>\n",
-       "      <td>1241711698</td>\n",
+       "      <td>1267368848</td>\n",
        "      <td>True</td>\n",
        "      <td>2</td>\n",
        "      <td>highway</td>\n",
-       "      <td>track</td>\n",
+       "      <td>footway</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[5903241109, 5903241110, 11537601950, 11537601...</td>\n",
+       "      <td>[11771110207, 11771110206, 11314971869]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14430200</th>\n",
+       "      <th>14456137</th>\n",
        "      <td>way</td>\n",
-       "      <td>1241712615</td>\n",
+       "      <td>1267368849</td>\n",
+       "      <td>True</td>\n",
+       "      <td>8</td>\n",
+       "      <td>highway</td>\n",
+       "      <td>steps</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[11771110208, 11771110207]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14456146</th>\n",
+       "      <td>way</td>\n",
+       "      <td>1267368851</td>\n",
        "      <td>True</td>\n",
        "      <td>2</td>\n",
        "      <td>highway</td>\n",
-       "      <td>track</td>\n",
+       "      <td>footway</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[5903241102, 1752230963, 1752230962, 175223088...</td>\n",
+       "      <td>[11771110212, 11314971873]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>14430202</th>\n",
+       "      <th>14456149</th>\n",
        "      <td>way</td>\n",
-       "      <td>1241714037</td>\n",
+       "      <td>1267368852</td>\n",
        "      <td>True</td>\n",
-       "      <td>1</td>\n",
+       "      <td>7</td>\n",
        "      <td>highway</td>\n",
-       "      <td>track</td>\n",
+       "      <td>steps</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>[11537631707, 11537631708, 11537631705, 115376...</td>\n",
+       "      <td>[11771110213, 11771110212]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14456161</th>\n",
+       "      <td>way</td>\n",
+       "      <td>1267371060</td>\n",
+       "      <td>True</td>\n",
+       "      <td>2</td>\n",
+       "      <td>highway</td>\n",
+       "      <td>footway</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[11771124308, 11314965768, 11771110203, 117711...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>15318 rows × 9 columns</p>\n",
+       "<p>87479 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "          type          id  visible  ntags   tagkey tagvalue  longitude  \\\n",
-       "201       node      524024     True      0     None     None   9.054348   \n",
-       "8713      node    27345586     True      0     None     None   9.046306   \n",
-       "8714      node    27345587     True      0     None     None   9.047442   \n",
-       "8715      node    27345588     True      0     None     None   9.043650   \n",
-       "8716      node    27345589     True      0     None     None   9.038758   \n",
+       "145       node      523963     True      0     None     None   9.110167   \n",
+       "146       node      523965     True      0     None     None   9.108361   \n",
+       "147       node      523966     True      0     None     None   9.105139   \n",
+       "148       node      523967     True      0     None     None   9.101528   \n",
+       "149       node      523968     True      0     None     None   9.099194   \n",
        "...        ...         ...      ...    ...      ...      ...        ...   \n",
-       "14421281   way  1235559707     True      3  highway    track        NaN   \n",
-       "14430194   way  1241710459     True      4  highway    track        NaN   \n",
-       "14430198   way  1241711698     True      2  highway    track        NaN   \n",
-       "14430200   way  1241712615     True      2  highway    track        NaN   \n",
-       "14430202   way  1241714037     True      1  highway    track        NaN   \n",
+       "14456134   way  1267368848     True      2  highway  footway        NaN   \n",
+       "14456137   way  1267368849     True      8  highway    steps        NaN   \n",
+       "14456146   way  1267368851     True      2  highway  footway        NaN   \n",
+       "14456149   way  1267368852     True      7  highway    steps        NaN   \n",
+       "14456161   way  1267371060     True      2  highway  footway        NaN   \n",
        "\n",
        "           latitude                                           node_ids  \n",
-       "201       49.950931                                               None  \n",
-       "8713      49.936876                                               None  \n",
-       "8714      49.935329                                               None  \n",
-       "8715      49.933117                                               None  \n",
-       "8716      49.939419                                               None  \n",
+       "145       49.921222                                               None  \n",
+       "146       49.923500                                               None  \n",
+       "147       49.927583                                               None  \n",
+       "148       49.931861                                               None  \n",
+       "149       49.933972                                               None  \n",
        "...             ...                                                ...  \n",
-       "14421281        NaN            [11469989084, 11542421175, 11469989085]  \n",
-       "14430194        NaN  [11537578926, 11537578943, 11537578938, 115375...  \n",
-       "14430198        NaN  [5903241109, 5903241110, 11537601950, 11537601...  \n",
-       "14430200        NaN  [5903241102, 1752230963, 1752230962, 175223088...  \n",
-       "14430202        NaN  [11537631707, 11537631708, 11537631705, 115376...  \n",
+       "14456134        NaN            [11771110207, 11771110206, 11314971869]  \n",
+       "14456137        NaN                         [11771110208, 11771110207]  \n",
+       "14456146        NaN                         [11771110212, 11314971873]  \n",
+       "14456149        NaN                         [11771110213, 11771110212]  \n",
+       "14456161        NaN  [11771124308, 11314965768, 11771110203, 117711...  \n",
        "\n",
-       "[15318 rows x 9 columns]"
+       "[87479 rows x 9 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
